--- a/SimpleBlogNet/ClientApp/package.json
+++ b/SimpleBlogNet/ClientApp/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.0",
-    "rehype-highlight": "^6.0.0"
+    "rehype-highlight": "^6.0.0",
+    "vite-plugin-ejs": "^1.6.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
